--- a/src/main/resources/config.html
+++ b/src/main/resources/config.html
@@ -1,5 +1,10 @@
-<div class="form_item_block">
+<div class="form_item_block" title="see github page for a sample">
 	<label>URL:<span class="asterisk">*</span></label>
 	<input type="text" ng-model="url" ng-required="true"/>
 	<span class="form_error" ng-show="GOINPUTNAME[url].$error.server">{{ GOINPUTNAME[url].$error.server }}</span>
+</div>
+<div class="form_item_block" title="enter some random string if you want to use same url more than once">
+	<label>Dummy ID:</label>
+	<input type="text" ng-model="dummy_id" ng-required="true"/>
+	<span class="form_error" ng-show="GOINPUTNAME[dummy_id].$error.server">{{ GOINPUTNAME[dummy_id].$error.server }}</span>
 </div>
