--- a/src/main/resources/scm-config.html
+++ b/src/main/resources/scm-config.html
@@ -3,7 +3,12 @@
 	<input type="text" ng-model="url" ng-required="true"/>
 	<span class="form_error" ng-show="GOINPUTNAME[url].$error.server">{{ GOINPUTNAME[url].$error.server }}</span>
 </div>
-<div class="form_item_block" title="enter some random string if you want to use same url more than once">
+<div class="form_item_block" title="if you don't want to checkout all files enter a java regex to download matching files only">
+	<label>Filename Pattern:</label>
+	<input type="text" ng-model="pattern" ng-required="true"/>
+	<span class="form_error" ng-show="GOINPUTNAME[pattern].$error.server">{{ GOINPUTNAME[pattern].$error.server }}</span>
+</div>
+<div class="form_item_block" title="enter some random string if you want to use same url with same pattern more than once">
 	<label>Dummy ID:</label>
 	<input type="text" ng-model="dummy_id" ng-required="true"/>
 	<span class="form_error" ng-show="GOINPUTNAME[dummy_id].$error.server">{{ GOINPUTNAME[dummy_id].$error.server }}</span>
