added package material plugin, therefore refactored existing scm plugin, see GH #9

--- a/src/test/resources/files.html
+++ b/src/test/resources/files.html
@@ -9,8 +9,8 @@
 <a href="foo##1.2.3.txt">foo##1.2.3.txt</a>  03-Jan-2016 10:15    8 bytes
 <a href="foo##1.2.3.txt.md5">foo##1.2.3.txt.md5</a>  03-Jan-2016 10:15    32 bytes
 <a href="foo##1.2.3.txt.sha1">foo##1.2.3.txt.sha1</a>  03-Jan-2016 10:15    40 bytes
-<a href="foobar##1.2.3.txt">foobar##1.2.3.txt</a>  03-Jan-2016 10:15    8 bytes
-<a href="foobar##1.2.3.txt.md5">foobar##1.2.3.txt.md5</a>  03-Jan-2016 10:15    32 bytes
-<a href="foobar##1.2.3.txt.sha1">foobar##1.2.3.txt.sha1</a>  03-Jan-2016 10:15    40 bytes
+<a href="foobar##1.2.3.txt">foobar##1.2.3.txt</a>  03-Jan-2016 10:20    8 bytes <!-- note: later timestamp to test package-plugin -->
+<a href="foobar##1.2.3.txt.md5">foobar##1.2.3.txt.md5</a>  03-Jan-2016 10:20    32 bytes
+<a href="foobar##1.2.3.txt.sha1">foobar##1.2.3.txt.sha1</a>  03-Jan-2016 10:20    40 bytes
 </pre>
 <hr/><address style="font-size:small;">Artifactory/... Server at ... Port ...</address></body></html>
