--- a/src/main/resources/scm-config.html
+++ b/src/main/resources/scm-config.html
@@ -4,7 +4,7 @@
 	<span class="form_error" ng-show="GOINPUTNAME[url].$error.server">{{ GOINPUTNAME[url].$error.server }}</span>
 </div>
 <div class="form_item_block" title="if you don't want to checkout all files enter a java regex to download matching files only">
-	<label>Filename Pattern:</label>
+	<label>Filename Regex:</label>
 	<input type="text" ng-model="pattern" ng-required="true"/>
 	<span class="form_error" ng-show="GOINPUTNAME[pattern].$error.server">{{ GOINPUTNAME[pattern].$error.server }}</span>
 </div>
