--- a/src/main/resources/scm-config.html
+++ b/src/main/resources/scm-config.html
@@ -5,11 +5,17 @@
 </div>
 <div class="form_item_block" title="if you don't want to checkout all files enter a java regex to download matching files only">
 	<label>Filename Regex:</label>
-	<input type="text" ng-model="pattern" ng-required="true"/>
+	<input type="text" ng-model="pattern" ng-required="false"/>
 	<span class="form_error" ng-show="GOINPUTNAME[pattern].$error.server">{{ GOINPUTNAME[pattern].$error.server }}</span>
 </div>
 <div class="form_item_block" title="enter some random string if you want to use same url with same pattern more than once">
 	<label>Dummy ID:</label>
-	<input type="text" ng-model="dummy_id" ng-required="true"/>
+	<input type="text" ng-model="dummy_id" ng-required="false"/>
 	<span class="form_error" ng-show="GOINPUTNAME[dummy_id].$error.server">{{ GOINPUTNAME[dummy_id].$error.server }}</span>
+</div>
+<div class="form_item_block" title="If enabled there will be no download of files but just a file version.txt will be created. Allows for greater flexibility in your custom scripts.">
+
+	<label>version.txt only:</label>
+	<input type="checkbox" ng-model="version_only" ng-required="false" ng-checked="version_only"/>
+	<span class="form_error" ng-show="GOINPUTNAME[version_only].$error.server">{{ GOINPUTNAME[version_only].$error.server }}</span>
 </div>
