--- a/src/main/resources/scm-config.html
+++ b/src/main/resources/scm-config.html
@@ -14,8 +14,7 @@
 	<span class="form_error" ng-show="GOINPUTNAME[dummy_id].$error.server">{{ GOINPUTNAME[dummy_id].$error.server }}</span>
 </div>
 <div class="form_item_block" title="If enabled there will be no download of files but just a file version.txt will be created. Allows for greater flexibility in your custom scripts.">
-
 	<label>version.txt only:</label>
-	<input type="checkbox" ng-model="version_only" ng-required="false" ng-checked="version_only"/>
+	<input type="text" ng-model="version_only" ng-required="false" />
 	<span class="form_error" ng-show="GOINPUTNAME[version_only].$error.server">{{ GOINPUTNAME[version_only].$error.server }}</span>
 </div>
