--- a/src/main/resources/scm-config.html
+++ b/src/main/resources/scm-config.html
@@ -8,7 +8,12 @@
 	<input type="text" ng-model="pattern" ng-required="false"/>
 	<span class="form_error" ng-show="GOINPUTNAME[pattern].$error.server">{{ GOINPUTNAME[pattern].$error.server }}</span>
 </div>
-<div class="form_item_block" title="enter some random string if you want to use same url with same pattern more than once">
+<div class="form_item_block" title="if you have directories in artifactory that shall not be handled as revisions">
+	<label>Version Regex:</label>
+	<input type="text" ng-model="version_regex" ng-required="false"/>
+	<span class="form_error" ng-show="GOINPUTNAME[version_regex].$error.server">{{ GOINPUTNAME[version_regex].$error.server }}</span>
+</div>
+<div class="form_item_block" title="enter some random string if you want to use same url with same pattern(s) more than once">
 	<label>Dummy ID:</label>
 	<input type="text" ng-model="dummy_id" ng-required="false"/>
 	<span class="form_error" ng-show="GOINPUTNAME[dummy_id].$error.server">{{ GOINPUTNAME[dummy_id].$error.server }}</span>
