--- a/src/main/resources/scm-config.html
+++ b/src/main/resources/scm-config.html
@@ -13,6 +13,16 @@
 	<input type="text" ng-model="version_regex" ng-required="false"/>
 	<span class="form_error" ng-show="GOINPUTNAME[version_regex].$error.server">{{ GOINPUTNAME[version_regex].$error.server }}</span>
 </div>
+<div class="form_item_block">
+	<label>Username:</label>
+	<input type="text" ng-model="username" ng-required="false"/>
+	<span class="form_error" ng-show="GOINPUTNAME[username].$error.server">{{ GOINPUTNAME[username].$error.server }}</span>
+</div>
+<div class="form_item_block">
+	<label>Password:</label>
+	<input type="password" ng-model="password" ng-required="false"/>
+	<span class="form_error" ng-show="GOINPUTNAME[password].$error.server">{{ GOINPUTNAME[password].$error.server }}</span>
+</div>
 <div class="form_item_block" title="enter some random string if you want to use same url with same pattern(s) more than once">
 	<label>Dummy ID:</label>
 	<input type="text" ng-model="dummy_id" ng-required="false"/>
